--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 </head>
 <body>
+    <!-- 任意の変更 -->
     <!-- サイトTOP -->
     <div class="top-logo">
         <img src="img/main-logo.png" alt="PORTFOLIO SHIORIYOSHIDA">
