10、任意の変更

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <!-- 任意の変更 -->
+    <!-- 任意の変更 -->
     <!-- サイトTOP -->
     <div class="top-logo">
         <img src="img/main-logo.png" alt="PORTFOLIO SHIORIYOSHIDA">
